# linkwise-url-shortener

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  env.example  pyproject.toml
backend/alembic/: env.py
backend/src/linkwise_api/: __init__.py  main.py
backend/src/linkwise_api/api/: __init__.py  router.py
backend/src/linkwise_api/api/v1/: __init__.py
backend/src/linkwise_api/api/v1/endpoints/: __init__.py  health.py  links.py
backend/src/linkwise_api/core/: __init__.py  config.py  logging.py
backend/src/linkwise_api/db/: __init__.py  base.py  session.py
backend/src/linkwise_api/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py
backend/src/linkwise_api/models/: __init__.py  click.py  link.py
backend/src/linkwise_api/repositories/: __init__.py  click_repository.py  link_repository.py
backend/src/linkwise_api/schemas/: __init__.py  click.py  link.py
backend/src/linkwise_api/services/: __init__.py  analytics_service.py  link_service.py  rate_limit_service.py
backend/src/linkwise_api/utils/: __init__.py  security.py  validators.py
backend/tests/: conftest.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/styles/: globals.css
