 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "linkwise-api"
 version = "0.1.0"
 description = "FastAPI backend for Linkwise URL Shortener"
 readme = "README.md"
 requires-python = ">=3.11"
 license = { text = "MIT" }
 authors = [{ name = "Your Name" }]
 dependencies = [
   "fastapi>=0.111",
   "uvicorn[standard]>=0.30",
   "pydantic>=2.7",
   "sqlalchemy>=2.0",
   "alembic>=1.13",
   "asyncpg>=0.29",
   "python-dotenv>=1.0",
   "httpx>=0.27",
   "orjson>=3.10",
   "redis>=5.0",
 ]

 [project.optional-dependencies]
 dev = [
   "ruff>=0.5",
   "black>=24.4",
   "isort>=5.13",
   "pytest>=8.3",
   "pytest-asyncio>=0.23",
   "mypy>=1.10",
   "types-redis>=4.6",
 ]

 [tool.ruff]
 line-length = 100
 target-version = "py311"
 select = ["E", "F", "I", "N", "UP", "B"]
 ignore = ["E203"]

 [tool.isort]
 profile = "black"
 line_length = 100

 [tool.black]
 line-length = 100
 target-version = ["py311"]

 [tool.pytest.ini_options]
 minversion = "8.0"
 addopts = "-q"
 testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]


